--- a/app/src/main/res/layout/activity_after_search.xml
+++ b/app/src/main/res/layout/activity_after_search.xml
@@ -7,9 +7,98 @@
     android:background="@color/aqua"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <FrameLayout
+        android:id="@+id/Frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.ssomai.android.scalablelayout.ScalableLayout
+            android:id="@+id/scalableLayout_logo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            app:scale_base_height="300"
+            app:scale_base_width="2120">
+
+            <EditText
+                android:id="@+id/searchBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/around"
+                android:hint="검색어 입력"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:paddingStart="45dp"
+                android:textColor="@color/black_to_white"
+                android:textColorHint="@color/black_to_white"
+                app:scale_height="270"
+                app:scale_textsize="100"
+                app:scale_top="30"
+                app:scale_width="2120"
+                android:fontFamily="@font/pretendard_regular"/>
+
+            <ImageButton
+                android:id="@+id/back_icon"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:onClick="back"
+                android:scaleType="center"
+                app:srcCompat="@drawable/back_25"
+
+                app:scale_height="150"
+                app:scale_left="50"
+                app:scale_top="90"
+                app:scale_width="100"
+                tools:ignore="OnClick" />
+
+
+            <ImageButton
+                android:id="@+id/clearB2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/cross_2"
+                android:background="@android:color/transparent"
+                android:visibility="gone"
+                android:scaleType="centerCrop"
+                app:scale_height="130"
+                app:scale_left="1645"
+                app:scale_top="95"
+                app:scale_width="130" />
+
+            <View
+                android:id="@+id/lineView2"
+                android:layout_width="wrap_content"
+                android:layout_height="0.3dp"
+                android:background = "#d3d3d3"
+                android:visibility="gone"
+                app:scale_height="185"
+                app:scale_left="1830"
+                app:scale_top="70"
+                app:scale_width="5" />
+
+            <ImageButton
+                android:id="@+id/search2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/search_2"
+                app:scale_height="140"
+                app:scale_left="1900"
+                app:scale_top="90"
+                app:scale_width="140" />
+        </com.ssomai.android.scalablelayout.ScalableLayout>
+    </FrameLayout>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/aqua"
@@ -18,7 +107,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/back_icon"
+            android:id="@+id/birdIcon"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="15dp"
@@ -48,11 +137,32 @@
             android:textSize="25sp" />
     </androidx.appcompat.widget.Toolbar>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/Frame"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/wordRe2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:visibility="gone"
+            android:background="@drawable/recy"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constrainedHeight="true"
+            tools:listitem="@layout/item" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/after_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/aqua"
+        android:background="@color/white"
         android:orientation="vertical"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -74,6 +184,7 @@
 
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:id="@+id/sca"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/aqua"
